# evillm

./: .gitignore  Makefile  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_add_embedding_jobs.py
app/: __init__.py  cli.py  exceptions.py  main.py
app/agents/: audit.py  draft_workflow.py  ocr_workflow.py  state_contract.py  utils.py
app/config/: __init__.py  ingestion.py  manager.py  ocr.py  settings.py  storage.py
app/database/: __init__.py  engine.py  migrations.py  models.py  session.py
app/ingestion/: __init__.py  attachments.py  checkpoints.py  chunking.py  deduplication.py  metrics.py  models.py  normalizer.py  parser.py  pipeline.py  threading.py
app/middleware/: __init__.py  logging.py  rate_limit.py  tenant_isolation.py
app/routers/: __init__.py  api_alias.py  debug.py  draft.py  eval_router.py  health.py  ingestion.py  search_metrics.py  search_qa.py  ui.py
app/services/: bm25_search.py  document_processor.py  embeddings.py  eval_gate.py  fusion.py  llm.py  ocr.py  retriever.py  search_metrics.py  search_qa.py
app/templates/: base.html  draft.html  index.html  search.html  upload.html
config/: app.yaml
data/ingestion/checkpoints/completed/: sample_batch_001_completed.json  test_batch_001_completed.json
eval/: promptfoo.yaml
examples/: sample_manifest.json  test_manifest.json
examples/sample_emails/: email1.eml  email2.eml  email3.eml
infra/: Dockerfile  docker-compose.yml  env.example
reports/: final_demo_checklist.md  roadmap_status.md  roadmap_status_2025-08-16.md  runtime_strict_report.json  strict_mode_attestation.md  strict_scan_output.json
scripts/: collect_metrics.py  demo_seed.py  strict_scan.py
specs/: design.md  requirements.md  tasks.md
tests/: __init__.py  test_bm25_search.py  test_config.py  test_database.py  test_draft_workflow.py  test_embeddings.py  test_fusion.py  test_health.py  test_ingestion.py  test_ocr.py  test_ocr_workflow.py  test_ocr_workflow_state_contract.py  test_search_metrics.py  test_search_qa.py  test_storage.py
tests/strict_mode/: test_scanner.py  test_strict_gates.py  test_ui_smoke.py
